--- a/purchase_pricelist/views/product_pricelist_view.xml
+++ b/purchase_pricelist/views/product_pricelist_view.xml
@@ -5,7 +5,22 @@
         <field name="inherit_id" ref="product.product_pricelist_view"/>
         <field name="arch" type="xml">
             <xpath expr="//group[@name='pricelist_settings']" position="inside">
-                <field name="used_for" groups="sales_team.group_sale_manager,purchase.group_purchase_manager,base.group_erp_manager"/>
+                <field name="used_for" groups="base.group_no_one"/>
+                <field name="on_order" attrs="{'invisible':[('used_for','!=','purchase')]}"/>
+            </xpath>
+            <xpath expr="//field[@name='item_ids']" position="attributes">
+                <attribute name="attrs">{'invisible':[('used_for','=','purchase'),('on_order','=',True)]}</attribute>
+            </xpath>
+            <xpath expr="//field[@name='item_ids']" position="after">
+                <p>Set quantity in descending order lines</p>
+                <field name="product_pricelist_order_ids" attrs="{'invisible':['|',('used_for','=','sale'),('on_order','=',False)]}">
+                    <tree editable="bottom">
+                        <field name="pricelist_id" invisible="1"/>
+                        <field name="sequence" widget="handle"/>
+                        <field name="order_amount"/>
+                        <field name="discount"/>
+                    </tree>
+                </field>
             </xpath>
         </field>
     </record>
