--- a/purchase_pricelist/views/purchase_order_view.xml
+++ b/purchase_pricelist/views/purchase_order_view.xml
@@ -25,6 +25,12 @@
         <field name="model">purchase.order</field>
         <field name="inherit_id" ref="purchase.purchase_order_form" />
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_ref']" position="after">
+                <div class="o_row">
+                    <field name="pricelist_id" options="{'no_open':True,'no_create': True}" domain="[('used_for','=','purchase'),]"/>
+                    <button name="update_prices" type="object" string=" Update Prices" attrs="{'invisible': [('state', 'in', ['purchase', 'done','cancel'])]}"/>
+                </div>
+            </xpath>
             <xpath
                 expr="//field[@name='order_line']/tree/field[@name='price_unit']"
                 position="after"
