[FIX]CRM Lead field issue

--- a/bista_crm/views/crm_lead_views.xml
+++ b/bista_crm/views/crm_lead_views.xml
@@ -113,8 +113,8 @@
                             <field name="product_status_notes" style="max-height: 25px;"/>
                         </group>
                         <group name="Pricing_info" string="Pricing Info">
-                            <field name="special_pricing_type_id"/>
-                            <field name="special_pricing_notes" style="max-height: 25px;"/>
+<!--                            <field name="special_pricing_type_id"/>-->
+                            <field name="special_pricing_notes"/>
                         </group>
                     </group>
                 </page>
