--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -73,18 +73,18 @@
                 <page string="Order Notes" name="order_notes">
                     <sheet>
                         <group>
-                            <group name="order_notes" widget='html'>
+                            <group name="order_notes">
                                 <field name="event_date"/>
-                                <field name="order_notes" widget='html'/>
-                                <field name="gorgias_ticket" widget='html'/>
-                                <field name="product_status_notes" widget='html'/>
+                                <field name="order_notes" style="max-height:28px;"/>
+                                <field name="gorgias_ticket"  widget='url' style="max-height:28px;"/>
+                                <field name="product_status_notes"  style="max-height:28px;"/>
                             </group>
                             <group>
-                                <field name="white_glove_id" widget='html'/>
-                                <field name="ce_notes" widget='html'/>
-                                <field name="payment_notes" widget='html'/>
-                                <field name="am_notes" widget='html'/>
-                                <field name="ce_ops_acct_notes" widget='html'/>
+                                <field name="white_glove_id"/>
+                                <field name="ce_notes" style="max-height:28px;"/>
+                                <field name="payment_notes"  style="max-height:28px;"/>
+                                <field name="am_notes"  style="max-height:28px;"/>
+                                <field name="ce_ops_acct_notes"  style="max-height:28px;"/>
                             </group>
                         </group>
                     </sheet>
@@ -94,12 +94,11 @@
                 <page name="journal_details" string="Journal Details">
                     <group>
                         <group name="journal_details">
-                            <field name="journal_customization_id"/>
-                            <field name="customization_cost"/>
-                            <field name="link_to_art_files"/>
-                            <field name="artwork_status_id"/>
-                            <field name="journal_notes" widget='html'/>
-                            <field name="journal_setup_fee_waived"/>
+                            <field name="journal_customization_id" style="height:15px;"/>
+                            <field name="link_to_art_files" style="max-height:23px;"/>
+                            <field name="artwork_status_id" style="height:13px;"/>
+                            <field name="journal_notes" style="max-height:23px;"/>
+                            <field name="journal_setup_fee_waived" style="height:15px; size:2;"/>
                         </group>
                         <group>
                             <field name="journal_setup_fee"/>
@@ -107,6 +106,8 @@
                             <field name="shipping_cost"/>
                             <field name="death_type_id"/>
                             <field name="existing_death_order"/>
+                            <field name="customization_cost"/>
+
                         </group>
                     </group>
                 </page>
@@ -118,21 +119,21 @@
                             <field name="fulfilment_project"/>
                             <field name="am_owner"/>
                             <field name="project_description"/>
-                            <field name="status_notes" widget='html'/>
+                            <field name="status_notes" style="max-height:28px;"/>
                             <field name="delivery_location"/>
-                            <field name="project_status"/>
-                            <field name="shipping_instruction"/>
+                            <field name="project_status" style="height:30px;"/>
+                            <field name="shipping_instruction" style="max-height:28px;"/>
                             <field name="customization_type_ids" widget="many2many_tags"/>
+                            <field name="individual_mailer_return_address" style="height:30px;"/>
                         </group>
                         <group>
-                            <field name="special_insert_note"/>
-                            <field name="attachment_note"/>
-                            <field name="individual_mailer_return_receiver"/>
-                            <field name="recipient_list_status"/>
-                            <field name="recipient_list_expected"/>
-                            <field name="individual_mailer_return_address"/>
+                            <field name="special_insert_note" style="max-height:28px;"/>
+                            <field name="attachment_note" style="max-height:28px;"/>
                             <field name="book_status"/>
-                            <field name="on_hold_reason" widget='html'/>
+                            <field name="on_hold_reason" style="max-height:28px;"/>
+                            <field name="recipient_list_status"/>
+                            <field name="individual_mailer_return_receiver" style="height:28px; size:50;" />
+                            <field name="recipient_list_expected" style="height:15px;"/>
                         </group>
                     </group>
                 </page>
@@ -141,7 +142,7 @@
                 <page string="Payment">
                     <group>
                         <group name="payment_info">
-                            <field name="billing_notes"/>
+                            <field name="billing_notes" style="max-height:25px;"/>
                         </group>
                         <group>
                             <field name="placed_from_ip"/>
@@ -151,5 +152,4 @@
             </xpath>
         </field>
     </record>
-
 </odoo>
