--- a/purchase_pricelist/views/product_supplierinfo_view.xml
+++ b/purchase_pricelist/views/product_supplierinfo_view.xml
@@ -14,7 +14,7 @@
         <field name="inherit_id" ref="product.product_supplierinfo_tree_view" />
         <field name="arch" type="xml">
             <field name="price" position="after">
-                <field name="vendor_pricelist_id" options="{'no_create':1}" domain="[('used_for','=','purchase')('on_order','=',True)]"/>
+                <field name="vendor_pricelist_id" options="{'no_create':1}" domain="[('used_for','=','purchase'),('on_order','!=',True)]"/>
             </field>
         </field>
     </record>
